--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container">
         <div class="box">
             <div class="img">
-                <img class="img-1" src="https://user-images.githubusercontent.com/84734202/153724735-f24ac6c5-450d-4bb4-a87c-c2af215dbb07.jpg" />
+                <img class="img-1" src="https://user-images.githubusercontent.com/84734202/153724735-f24ac6c5-450d-4bb4-a87c-c2af215dbb07.jpg" alt="
+workgroup image"/>
             </div>
             <main>
                 <div class="text">
